--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -91,7 +91,7 @@
   .navbar .logo {
     position: absolute;
     top: 23px;
-    left: 20px;
+    /* left: 20px; */
   }
 
   .navbar .toggle-icon {
