--- a/src/styles/SignUp.css
+++ b/src/styles/SignUp.css
@@ -9,8 +9,8 @@
   padding: 0;
   font-family: "Montserrat", sans-serif;
 }
-h4 {
-}
+/* h4 {
+} */
 .sh1 {
   font-size: 2.25rem;
   font-weight: 700;
@@ -34,9 +34,9 @@ a {
   display: flex;
   flex-direction: column;
 }
-.left {
-  height: 200px;
-}
+/* .left { */
+/* height: 200px; */
+/* } */
 .left,
 .right {
   display: flex;
@@ -80,6 +80,10 @@ a {
 h3 {
   margin-right: 180px;
 }
+.allrad {
+  display: inline-block;
+  align-items: center;
+}
 .right,
 .copy p {
   margin: 1.5em 0;
@@ -91,6 +95,7 @@ h3 {
   width: 328px;
   /* margin-right: 90px; */
 }
+
 form input[type="text"],
 form input[type="email"],
 form input[type="password"] {
@@ -198,5 +203,8 @@ label {
   .right {
     justify-content: center;
     margin-left: 0;
+  }
+  .left {
+    display: none;
   }
 }
