--- a/src/styles/News.css
+++ b/src/styles/News.css
@@ -57,3 +57,20 @@ body {
   position: relative;
   /* width: 100%; */
 }
+
+.loader {
+  border: 16px solid #a422cd;
+  border-top: #a422cd;
+  border: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
