--- a/src/styles/News.css
+++ b/src/styles/News.css
@@ -59,11 +59,11 @@ body {
 }
 
 .loader {
-  border: 16px solid #f3f3f3;
+  border: 16px solid white;
   border-radius: 50%;
-  border-top: 16px solid blue;
-  border-right: 16px solid green;
-  border-bottom: 16px solid red;
+  border-top: 16px solid #a422cd;
+  border-right: 16px solid #a422cd;
+  border-bottom: 16px solid #a422cd;
   width: 120px;
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
